asciidoc generation from components --
asciidoc build selectable through configure --enable-build-documentation=asciidoc
By default, without the switch, generates man pages only

Change instcomp to provide both man page and asciidoc
Alter submakefile for same

Amend comp to produce both man pages and asciidoc pages
Change src/hal/components/Submakefile to produce asciidocs
for all man page types

New option headers of 'special_format_man' and 'special_format_doc'
in comp and instcomp

These are to be used for any options such as tables which do not
transpose from one format to the other.

The contents of the field is rendered after the DESCRIPTION section
see lut5.icomp for an example

Create man/doc/man(1,3,9)

Edit all .comp and .icomp files to remove in-line groff formatting

Fix 'make clean' for generated asciidocs.

Insert source origin into man and asciidocs.

Deleted redundent man pages for debounce and at_pid

Remove man/man9/pid.9 and update man/man1/axis-remote.1

    Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/man/man1/axis-remote.1
+++ b/man/man1/axis-remote.1
@@ -23,15 +23,23 @@
 .\"
 .\"
 .\"
-.TH axis-remote "1"  "2007-04-01" "LinuxCNC Documentation" "The Enhanced Machine Controller"
+.TH axis-remote "1"  "2016-04-16" "Machinekit Documentation" 
 .SH NAME
+.TP
+.TP
 axis-remote \- AXIS Remote Interface
 .SH SYNOPSIS
+.TP
+.TP
 .B axis-remote \fIOPTIONS\fR|\fIFILENAME\fR
 .SH DESCRIPTION
+.TP
+.TP
 \fBaxis-remote\fR is a small script that triggers commands in a running AXIS GUI.
 Use \fBaxis-remote --help\fR for further information.
 .SH OPTIONS
+.TP
+.TP
 .TP
 \fB--ping\fR, \fB-p\fR
 Check whether AXIS is running.
@@ -59,19 +67,31 @@ Load the G-code file \fBFILENAME\fR.
 .SH "SEE ALSO"
 \fBaxis(1)\fR
 
-Much more information about LinuxCNC and HAL is available in the LinuxCNC
-and HAL User Manuals, found at /usr/share/doc/linuxcnc/.
+Much more information about Machinekit and HAL is available in the Machinekit
+and HAL User Manuals, found at /usr/share/doc/machinekit/.
 
 .SH HISTORY
-
+.TP
+.TP
+None
+    
 .SH BUGS
+.TP
+.TP
 None known at this time. 
 .PP
+
 .SH AUTHOR
-This man page written by Alex Joni, as part of the LinuxCNC project.
+.TP
+.TP
+This man page written by Alex Joni, as part of the Machinekit project.
+
 .SH REPORTING BUGS
 Report bugs to alex_joni AT users DOT sourceforge DOT net
+
 .SH COPYRIGHT
+.TP
+.TP
 Copyright \(co 2007 Alex Joni.
 .br
 This is free software; see the source for copying conditions.  There is NO
