--- a/man/man1/axis-remote.asciidoc
+++ b/man/man1/axis-remote.asciidoc
@@ -71,8 +71,6 @@ None
 
 
 None known at this time. 
-.PP
-
 
 
 == AUTHOR
@@ -90,6 +88,6 @@ Report bugs to alex_joni AT users DOT sourceforge DOT net
 == COPYRIGHT
 
 
-Copyright \(co 2007 Alex Joni.
+Copyright (c) 2007 Alex Joni.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
